# ChangeLog for sys-libs/lwp
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/lwp/ChangeLog,v 1.28 2005/10/17 19:23:17 griffon26 Exp $

  17 Oct 2005; Maurice van der Pot <griffon26@gentoo.org>
  -files/lwp-1.10-amd64.patch, -lwp-1.12.ebuild:
  Removed old version.

*lwp-2.1 (23 Sep 2005)

  23 Sep 2005; Maurice van der Pot <griffon26@gentoo.org> +lwp-2.1.ebuild:
  Added lwp 2.1 for new coda release 6.0.12

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> lwp-2.0.ebuild:
  stable on ia64

  18 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> lwp-2.0.ebuild:
  Stable on ppc.

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> lwp-2.0.ebuild:
  Stable on alpha.

  07 Jul 2005; Maurice van der Pot <griffon26@gentoo.org> lwp-2.0.ebuild:
  Marked stable on x86

  08 Jun 2005; Maurice van der Pot <griffon26@gentoo.org> -lwp-1.9.ebuild,
  -lwp-1.10.ebuild, -lwp-1.11.ebuild, lwp-1.12.ebuild, lwp-2.0.ebuild:
  Removed old versions. Adapted to change in location of source package.

*lwp-2.0 (05 May 2005)

  05 May 2005; Maurice van der Pot <griffon26@gentoo.org>
  +files/lwp-2.0-amd64.patch, +lwp-2.0.ebuild:
  Added new release and updated amd64 patch.

  20 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> lwp-1.12.ebuild:
  Stable on ppc.

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> lwp-1.12.ebuild:
  Stable on alpha.

  03 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  22 Dec 2004; Maurice van der Pot <griffon26@gentoo.org> lwp-1.12.ebuild:
  Marked stable on x86

*lwp-1.12 (23 Oct 2004)

  23 Oct 2004; Maurice van der Pot <griffon26@gentoo.org> lwp-1.11.ebuild,
  +lwp-1.12.ebuild:
  Version bump for new coda release 6.0.7
  Marked lwp-1.11 stable on x86

*lwp-1.12 (21 Oct 2004)

  21 Oct 2004; Maurice van der Pot <griffon26@gentoo.org> +lwp-1.12.ebuild:

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> lwp-1.10.ebuild: