@@ -1,17 +1,46 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 35caccb32e864542520775c8a14e3ee2 ChangeLog 3322
-MD5 30ec12e50fe24609f01a4b5887448a42 files/digest-lwp-2.0 59
-MD5 e3d82442ff9aa23abe755f6dfca0cdc2 files/digest-lwp-2.1 59
+AUX lwp-2.0-amd64.patch 866 RMD160 d1e0fd6a2eae11366ee838c54ebc6f68c96a1f27 SHA1 8fb8e2917acbd9a3cc7a22b952f969b147ae29a4 SHA256 801eedce6758cb0765ebf2d215854797eef15f984af4311a7e7220cb1819f38d
 MD5 147bcbca707eadf9faeea72963a197e1 files/lwp-2.0-amd64.patch 866
+RMD160 d1e0fd6a2eae11366ee838c54ebc6f68c96a1f27 files/lwp-2.0-amd64.patch 866
+SHA256 801eedce6758cb0765ebf2d215854797eef15f984af4311a7e7220cb1819f38d files/lwp-2.0-amd64.patch 866
+DIST lwp-2.0.tar.gz 362141
+DIST lwp-2.1.tar.gz 362551
+DIST lwp-2.2.tar.gz 376136 RMD160 c227f4162dfee9a866747de34bbf04d0c7dff4e4 SHA1 a33f8b56762c559f0d449ba80f04e1afc87703cf SHA256 64a3570559083bee657551b6673037161f33b71ad55ee45812612c29df2924b0
+EBUILD lwp-2.0.ebuild 816 RMD160 a531d0a45757adb8dd25ca18578f0370433b29c5 SHA1 41922fed3fb0f474457894a3efae0b5398831936 SHA256 f22b977b1018f567714f257a0c2f2e3bbc91645fe19863d7ae295c989b42ad12
 MD5 7593634172e32819f08a194ab88232e7 lwp-2.0.ebuild 816
+RMD160 a531d0a45757adb8dd25ca18578f0370433b29c5 lwp-2.0.ebuild 816
+SHA256 f22b977b1018f567714f257a0c2f2e3bbc91645fe19863d7ae295c989b42ad12 lwp-2.0.ebuild 816
+EBUILD lwp-2.1.ebuild 821 RMD160 4638a9ca092145b704510863c209ca16eea788dd SHA1 0bbf2669e5b42c4d7ba860a71c0f5109719c9c4a SHA256 3994ff2ed934ce8d1a18fa5cefde5628417e83672bc44d15cb87bba303b42bc2
 MD5 ad92edaa3add3a5b4bca8d3b208e6585 lwp-2.1.ebuild 821
+RMD160 4638a9ca092145b704510863c209ca16eea788dd lwp-2.1.ebuild 821
+SHA256 3994ff2ed934ce8d1a18fa5cefde5628417e83672bc44d15cb87bba303b42bc2 lwp-2.1.ebuild 821
+EBUILD lwp-2.2.ebuild 821 RMD160 1d15fee5b8c42418990af836d50b81400488108f SHA1 8b8846ff74a048a1a406add38a2698082b041f6a SHA256 6bec0d7a34c5bf02907241d75c21b57f1924644771958817a5392bf47c82fc5b
+MD5 994e44adbac59137ce2a3254151cd3a9 lwp-2.2.ebuild 821
+RMD160 1d15fee5b8c42418990af836d50b81400488108f lwp-2.2.ebuild 821
+SHA256 6bec0d7a34c5bf02907241d75c21b57f1924644771958817a5392bf47c82fc5b lwp-2.2.ebuild 821
+MISC ChangeLog 3539 RMD160 02408ec5b7cbfafebbe5fe1b29662fd690292597 SHA1 7d9ac17bc6be5b992f788e9597b8e4b3dc9859aa SHA256 bdc659ebcc0a60880af7dad0b6a9602c19e0b5e863af7c420f552771f2b4ff4f
+MD5 1b69ef3fdc0c51d0ca7ef0c7178ae174 ChangeLog 3539
+RMD160 02408ec5b7cbfafebbe5fe1b29662fd690292597 ChangeLog 3539
+SHA256 bdc659ebcc0a60880af7dad0b6a9602c19e0b5e863af7c420f552771f2b4ff4f ChangeLog 3539
+MISC metadata.xml 224 RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a SHA1 69ba0e7a8541e626d9e6cfe04d8dcca7d99711bb SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0
 MD5 fdd307ea78fc900a01e57b8151f34d4e metadata.xml 224
+RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a metadata.xml 224
+SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0 metadata.xml 224
+MD5 30ec12e50fe24609f01a4b5887448a42 files/digest-lwp-2.0 59
+RMD160 ca61ae9072208b71675ed8bdbc35f54badb77ea2 files/digest-lwp-2.0 59
+SHA256 c455f552ed6b478ec769e5eef879ace0a1025512285048ee837af0cdc1851f0f files/digest-lwp-2.0 59
+MD5 e3d82442ff9aa23abe755f6dfca0cdc2 files/digest-lwp-2.1 59
+RMD160 73cc7b74de19a364d839452b1dff57787756957c files/digest-lwp-2.1 59
+SHA256 84b7b9e0f3e4acbac8b21aade16040272ac30d5845404e999c7d50e360dbd057 files/digest-lwp-2.1 59
+MD5 10db9a0ebe7a8c9da27c1a07ce36e491 files/digest-lwp-2.2 223
+RMD160 17275bfbafc25ba15201ec4ec04d752f2f3d2f0b files/digest-lwp-2.2 223
+SHA256 e63462d1eca2099a1cf9e7cd0ed34a4d4c5e0157f1f5a06233fd3ee4fa0cd0b8 files/digest-lwp-2.2 223
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDU/pBMGnpIbeahxwRAnDSAJ4uIySzt4c8ic4Lxyk0w6a99YLCUQCgtfiU
-6P7HPbsloC7tcm0casyD2QU=
-=uyhB
+iD8DBQFEiAxkMGnpIbeahxwRAsK3AJ9JpfVW7osQULf2OeG5yDybdLlpAACfW17m
+ipxq/Dl3zoPGdwPxsgTR+y4=
+=h2MB
 -----END PGP SIGNATURE-----
