@@ -1,0 +1,3 @@
+MD5 5f43e125d791d74952804ab30844c060 lwp-2.2.tar.gz 376136
+RMD160 c227f4162dfee9a866747de34bbf04d0c7dff4e4 lwp-2.2.tar.gz 376136
+SHA256 64a3570559083bee657551b6673037161f33b71ad55ee45812612c29df2924b0 lwp-2.2.tar.gz 376136
