@@ -1,14 +1,34 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 ac00214bcbd04bc1612d031e23320275 ChangeLog 2548
-MD5 ab7a0893e657a22aee60e1bf9e5ead5f files/digest-rvm-1.11 60
-MD5 fdd307ea78fc900a01e57b8151f34d4e metadata.xml 224
+DIST rvm-1.11.tar.gz 519270
+DIST rvm-1.12.tar.gz 532869 RMD160 0fb596354733b384deb523c8f4266e387bfa2e8b SHA1 27dd25ed7b244cbdef6f606fc0e80aedf8cb9415 SHA256 62de522fd70fc22ce87767e3a942e331d50fb696c43cf7e80349258f9787192c
+EBUILD rvm-1.11.ebuild 636 RMD160 603cb0e360f52e8f4dd3eb6727c8829a6529d724 SHA1 53a7c4e930b53a97f082a471e8b7670d18c4840b SHA256 445b5a63c4953815c0b3ce27e66e966eaa5e13b2881dbbe17a59912573a70247
 MD5 e07e42f32e14813bd40128a22ec6e2ee rvm-1.11.ebuild 636
+RMD160 603cb0e360f52e8f4dd3eb6727c8829a6529d724 rvm-1.11.ebuild 636
+SHA256 445b5a63c4953815c0b3ce27e66e966eaa5e13b2881dbbe17a59912573a70247 rvm-1.11.ebuild 636
+EBUILD rvm-1.12.ebuild 641 RMD160 bcf2ac4286459d3ca8085759b606aba2615e91b6 SHA1 c74fe0e0a14d33d1e428b5a2fa78f2e0dfe6713a SHA256 f8791f70175754a672c3875479090644aeb962cff643f39119b3b049d3ae87b3
+MD5 2831c8c1ab4ec2518e4b5827f88b5b1d rvm-1.12.ebuild 641
+RMD160 bcf2ac4286459d3ca8085759b606aba2615e91b6 rvm-1.12.ebuild 641
+SHA256 f8791f70175754a672c3875479090644aeb962cff643f39119b3b049d3ae87b3 rvm-1.12.ebuild 641
+MISC ChangeLog 2771 RMD160 9755b957c065f33bf99debefa2e7d81843a93938 SHA1 e8d53dbd256187608e2b04c2870c72f6cf857b34 SHA256 dabdfaefbc9b2415e5e962c38f140216249f83ab10c085d5c5d9a31909d66fe9
+MD5 eb794733cb4ae1ff7bffb69ea8a66db5 ChangeLog 2771
+RMD160 9755b957c065f33bf99debefa2e7d81843a93938 ChangeLog 2771
+SHA256 dabdfaefbc9b2415e5e962c38f140216249f83ab10c085d5c5d9a31909d66fe9 ChangeLog 2771
+MISC metadata.xml 224 RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a SHA1 69ba0e7a8541e626d9e6cfe04d8dcca7d99711bb SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0
+MD5 fdd307ea78fc900a01e57b8151f34d4e metadata.xml 224
+RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a metadata.xml 224
+SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0 metadata.xml 224
+MD5 ab7a0893e657a22aee60e1bf9e5ead5f files/digest-rvm-1.11 60
+RMD160 964b69c082a15e6c2acf95ebd41dadbae79f9cb0 files/digest-rvm-1.11 60
+SHA256 c6bd39f384d29e487250c7080798cf6a539cf22274811568450dddaef4854ffb files/digest-rvm-1.11 60
+MD5 b288424c47933d4db6265c4b8a843045 files/digest-rvm-1.12 226
+RMD160 7c58e268add92aebfe65ba0328884f28dc276ecd files/digest-rvm-1.12 226
+SHA256 c6715f1bb78a55603167cc7e208611de0bc2e3c5fd1e02cba8c8fda9779cdf48 files/digest-rvm-1.12 226
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDU/n3MGnpIbeahxwRAnpXAJ9Trj8hkmAwLEqTRFCrhl3JJjEtrACfdVLk
-GWIZTEE8miUx7ZCNLnnEbrM=
-=2a1h
+iD8DBQFEiA1EMGnpIbeahxwRAgo7AKCp6v2NwN3xuJKgOJGvA/ZeXyQLcQCgiG5c
+7uElg8bvZhlND1zSUgCBR10=
+=AL6h
 -----END PGP SIGNATURE-----
