@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/lwp
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/lwp/ChangeLog,v 1.28 2005/10/17 19:23:17 griffon26 Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/lwp/ChangeLog,v 1.29 2006/06/08 11:39:06 griffon26 Exp $
+
+*lwp-2.2 (05 Jun 2006)
+
+  05 Jun 2006; Maurice van der Pot <griffon26@gentoo.org> +lwp-2.2.ebuild:
+  Added version 2.2 of lwp. Contains only build fixes for recent linux 
+  kernels and gcc 4.1 according to upstream.
 
   17 Oct 2005; Maurice van der Pot <griffon26@gentoo.org>
   -files/lwp-1.10-amd64.patch, -lwp-1.12.ebuild:
